--- a/app.json
+++ b/app.json
@@ -47,6 +47,13 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow this app to access your location to show nearby nature spots."
         }
+      ],
+      [
+        "react-native-health",
+        {
+          "healthSharePermission": "NatureUP would like to read your activity data to personalize excursions and track your wellness progress.",
+          "healthUpdatePermission": "NatureUP would like to save your nature excursions as workouts and mindful minutes to Apple Health."
+        }
       ]
     ],
     "experiments": {
